# webtc_homework

./: .gitignore  LICENSE  README.md  day1.md  gn_ninja.md
.github/workflows/: release-test-webrtc-mac-framework.yml
gn_ninja/: day4.md
s1/build_training/day1/: main.cpp
s1/build_training/day2/: BUILDCONFIG.gn  hello.h  main.cpp
s1/build_training/day3/project/: BUILD.gn
s1/build_training/day3/project/app/: main.cpp
s1/build_training/day3/project/hello/: BUILD.gn  hello.cpp
s1/build_training/day3/project/util/: BUILD.gn  util.cpp  util.h
s3/datachannel/web/: index.html
s3/datachannel_discover/web/: index.html
s3/datachannel_discover/wss_server/: package-lock.json  server.js
src/s1/build_training/day1/: .ninja_log  app  build.ninja  hello.cpp
src/s1/build_training/day2/: BUILD.gn  hello.cpp
src/s1/gn_ninja/: day1-day3.md
src/s2-prj3-file-trans/test_webrtc_mac_framework/: RELEASE.md  package-lock.json  package.json
src/s2-prj3-file-trans/test_webrtc_mac_framework/scripts/: package-release.sh
src/s2-prj3-file-trans/test_webrtc_mac_framework/test_webrtc_mac_framework/: AppDelegate.h  AppDelegate.m  HXAirDropStyleTransferViewController.h  HXAirDropStyleTransferViewController.m  HXReceiveViewController.h  HXReceiveViewController.m  HXSendViewController.h  HXSendViewController.m  RTCClient.h  RTCClient.m  main.mm
src/s2-prj3-file-trans/test_webrtc_mac_framework/test_webrtc_mac_framework.xcodeproj/: project.pbxproj
src/s2-prj3-file-trans/webrtc_file_sender/: .gitignore  package-lock.json  package.json  rtcclient-file-transfer-callflow.md  signaling-server.js  webrtc-architecture-talk.md
src/s2-prj3-file-trans/webrtc_file_sender/scripts/: package-release.sh
src/s2-prj3-file-trans/webrtc_file_sender/webrtc_file_sender/: AppDelegate.h  AppDelegate.m  HXAirDropStyleTransferViewController.h  HXAirDropStyleTransferViewController.m  HXReceiveViewController.h  RTCClient.h  (+5 more)
src/s2-prj3-file-trans/webrtc_file_sender/webrtc_file_sender.xcodeproj/: project.pbxproj
(+6 files in other folders)
