toolchain("default") {

  toolchain_args = {
    current_os = host_os
    current_cpu = host_cpu
  }

  tool("cc") {
    command = "clang -c {{source}} -o {{output}}"
    outputs = [ "{{source_out_dir}}/{{source_name_part}}.o" ]
    default_output_extension = ".o"
  }

  tool("cxx") {
    command = "clang++ -c {{source}} -o {{output}}"
    outputs = [ "{{source_out_dir}}/{{source_name_part}}.o" ]
    default_output_extension = ".o"
  }

  tool("link") {
    command = "clang++ {{inputs}} -o {{output}}"
    outputs = [ "{{root_out_dir}}/{{target_output_name}}" ]
    default_output_dir = "{{root_out_dir}}"
  }

   tool("alink") {
    command = "ar rcs {{output}} {{inputs}}"
    outputs = [ "{{root_out_dir}}/lib{{target_output_name}}.a" ]
    default_output_extension = ".a"
    default_output_dir = "{{root_out_dir}}"
  }

}

static_library("hello_lib") {
  sources = [ "hello.cpp" ]
}


executable("app") {
  sources = [ "main.cpp" ]
  deps = [ ":hello_lib" ]
}

